Fixes some contrast issues text on image, details not expand properly on intro

--- a/base.scss
+++ b/base.scss
@@ -89,7 +89,7 @@ main {
     font-weight: 600;
 font-size: 24px;
 line-height: 30px;
-color: #102A43;
+color: $blue-grey02;
 text-shadow: 0 0 50px hsla(0, 0%, 0%, .4);
 // text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -105,10 +105,10 @@ text-shadow: 0 0 50px hsla(0, 0%, 0%, .4);
 }
 
 .header-nav-list a {
-    color: #fff;
+    // color: #fff;
     text-decoration: none;
     text-shadow: 0 0 50px hsla(0, 0%, 0%, .4);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    // text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-weight: 400;
     margin-left: 32px;
 }
@@ -122,10 +122,10 @@ text-shadow: 0 0 50px hsla(0, 0%, 0%, .4);
 }
 
 .header-nav-list a:visited {
-    color: #fff;
+    // color: #fff;
     text-decoration: none;
     text-shadow: 0 0 50px hsla(0, 0%, 0%, .4);
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    // text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-weight: 400;
 }
 
@@ -267,7 +267,7 @@ h4 {
 p {
     // margin-top: 0;
     // font-family: 'Source Sans Pro', sans-serif;
-    margin-bottom: 1.4rem;
+    // margin-bottom: 1.4rem;
     max-width: 20em;
     // font-size: 1rem;
     color: hsl(209, 34%, 30%);
@@ -338,6 +338,8 @@ section {
 }
 
 
+// Links
+
 a {
   color: hsl(209, 61%, 16%);
   font-weight: 600;
@@ -357,7 +359,74 @@ a:active {
 a:visited {
   // color: hsl(209, 28%, 39%);
   color: hsl(209, 61%, 16%);
+  color: $blue-grey02;
 }
+
+
+
+@mixin text-underline-crop($background) {
+  text-shadow:  .03em 0 $background,
+                  -.03em 0 $background,
+                  0 .03em $background,
+                  0 -.03em $background,
+                  .06em 0 $background,
+                  -.06em 0 $background,
+                  .09em 0 $background,
+                  -.09em 0 $background,
+                  .12em 0 $background,
+                  -.12em 0 $background,
+                  .15em 0 $background,
+                  -.15em 0 $background;
+}
+
+@mixin text-background($color-bg, $color-text) {
+  background-image: linear-gradient($color-text, $color-text);
+  background-size: 1px 1px;
+  background-repeat: repeat-x;
+  background-position:  0% 95%;
+}
+
+@mixin text-selection($selection) {
+  &::selection {
+    @include text-underline-crop($selection);
+    background: $selection;
+  }
+
+  &::-moz-selection {
+  @include text-underline-crop($selection);
+  background: $selection;
+  }
+}
+
+@mixin link-underline($background, $text, $selection){
+  @include text-underline-crop($background);
+  @include text-background($background, $text);
+  @include text-selection($selection);
+
+  color: $text;
+  text-decoration: none;
+
+  *,
+  *:after,
+  &:after,
+  *:before,
+  &:before {
+    text-shadow: none;
+  }
+
+  &:visited {
+    color: $text;
+  }
+}
+
+// /* Example usage */
+// a {
+//   @include link-underline(#fff, #333, #0BF);
+// }
+
+
+
+
 
 .continue-field {
     display: flex;
@@ -384,6 +453,10 @@ a:visited {
     // flex-wrap: wrap;
     // justify-content: center;
 }
+
+// .continue-field a {
+//     @include link-underline(#fff, #333, #0BF);
+// }
 
 
 /* jonathan-borba-V3huxxhsztI-unsplash copy 1 */
@@ -446,6 +519,8 @@ color: #102A43;
  //        background-position: center;
  // background-repeat: no-repeat;
  // background-size: cover;
+
+    // min-height: 840px;
 }
 
 
@@ -471,7 +546,7 @@ font-family: Source Sans Pro;
 font-style: normal;
 font-weight: normal;
 font-size: 48px;
-line-height: 48px;
+line-height: 1;
 /* identical to box height, or 100% */
 
 
@@ -682,6 +757,11 @@ font-size: 12px;
         background-size: cover;
 }
 
+#section-unwanted-features > div.section-area > div.section-area-info > p:nth-child(2) {
+    color: $blue-grey01;
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.4);
+}
+
 .section-physical-features {
     background-color: $primary-light-background-color;
 }
@@ -778,7 +858,12 @@ div.control.hair-feature-area-inner {
         background-position: center;
 }
 
-.section-outro {
+#section-request-quote > div > div.section-area-info > p:nth-child(2) {
+    color: #102a42;
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.4);
+}
+
+.img-outro {
     background: url(section-outro.jpg);
         background-position: center;
         background-size: cover;
@@ -795,20 +880,29 @@ div.control.hair-feature-area-inner {
 }
 
 .section-outro p {
-    font-weight: 600;
+    // font-weight: 600;
     color: $blue-grey01;
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.4);
+
 }
 
-
-.about-page {
+.image-about-page {
     background: url(about.jpg);
         background-position: center;
         background-size: cover;
+
+        background-attachment: fixed;
+ background-repeat: no-repeat;
+}
+
+.about-page h1 {
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.4);
 }
 
 .about-page p {
-    font-weight: 600;
+    // font-weight: 600;
     color: $blue-grey01;
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.4);
 }
 
 fieldset {
@@ -2650,7 +2744,7 @@ fieldset {
   // width: 389px;
   // height: 48px;
   left: 812px;
-  top: 362px;
+  // top: 362px;
   }
 }
 
@@ -2709,5 +2803,50 @@ fieldset {
 @media screen and (max-width: 462px) {
     .top-info-banner {
     height: 48px;
+    }
+}
+
+
+@media screen and (max-width: 1206px) {
+    .heading-section-intro {
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    color: $blue-grey02;
+    max-width: 325px;
+    // line-height: 36px;
+}
+
+    .paragraph-section-intro {
+    font-size: 16px;
+    color: $blue-grey01;
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.4);
+    // line-height: 1.5rem;
+    }
+}
+
+
+@media screen and (max-width: 400px) {
+    .heading-section-intro {
+    font-family: Source Sans Pro;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 36px;
+    color: $blue-grey02;
+    // line-height: 36px;
+}
+
+    .paragraph-section-intro {
+    font-size: 16px;
+    color: $blue-grey01;
+    text-shadow: 0 0 50px rgba(0, 0, 0, 0.4);
+    // line-height: 1.5rem;
+    }
+
+    .section-intro-area-cta {
+    max-width: 256px;
+    padding-top: 12px;
+    padding-bottom: 16px;
     }
 }
